<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">    <item
    android:id="@+id/app_bar_search"
    android:icon="@drawable/ic_search_black_24dp"
    android:orderInCategory="100"
    android:title="Search"
    app:actionViewClass="android.widget.SearchView"
    app:showAsAction="always" />
    <item
        android:id="@+id/go_to_cart"
        android:orderInCategory="101"
        android:title="@string/go_to_cart"
        android:icon="@drawable/cart"
        app:showAsAction="never" />
    <item
        android:id="@+id/go_to_wishlist"
        android:orderInCategory="103"
        android:title="@string/go_to_wishlist"
        android:icon="@drawable/ic_heart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>