<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".auth.ResetPasswordActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/redirect_text">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@android:color/transparent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/login_pages"
                        >
                        <ImageView
                            android:id="@+id/logo_image"
                            android:src="@drawable/logo"
                            android:layout_gravity="center"
                            android:layout_width="180dp"
                            android:layout_height="180dp" />


                    </LinearLayout>



                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Change_Password"
                    style="@style/TextAppearance.MyApp.Toolbar"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_password"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/new_password_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_button_orange_text"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:elevation="10dp"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/confirm_password_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_button_orange_text"
                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:elevation="10dp"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center" />


            <Button
                android:id="@+id/button_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Change_password"
                android:backgroundTint="@color/colorWhite"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back_to_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.MaterialComponents.Button"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_arrow_back_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back_to_settings"
                    android:textColor="@color/colorWhite"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>



